commit with grunt plugins and gitignore file

--- a/sassindex.html
+++ b/sassindex.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>sass practice</title>
-<link href="bob.css" rel="stylesheet" type="text/css">
+<link href="styling/bob.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="js/script.min.js"></script>
 </head>
 <body>
 	<div class="first_class">
